eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalystx2-api-service
spec:
  selector:
    app: catalystx2-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
#  type: ClusterIP   
  type: LoadBalancer
